src/components/auth/auth.styl
.background
.content
    position fixed
    top 0
    right 0
    bottom 0
    left 0

.background
    z-index 1

    -webkit-filter blur(7px)
    -moz-filter blur(7px)
    -o-filter blur(7px)
    -ms-filter blur(7px)
    filter blur(7px)

    -webkit-transform scale(1.02)
    -moz-transform scale(1.02)
    -o-transform scale(1.02)
    -ms-transform scale(1.02)
    transform scale(1.02)

    background-repeat no-repeat
    background-position center
    background-size cover

    &.bg-1
        background-image url('../../assets/backgrounds/bg-1.png')
    &.bg-2
        background-image url('../../assets/backgrounds/bg-2.png')
    &.bg-3
        background-image url('../../assets/backgrounds/bg-3.png')
    &.bg-4
        background-image url('../../assets/backgrounds/bg-4.png')
    &.bg-5
        background-image url('../../assets/backgrounds/bg-5.png')
    &.bg-6
        background-image url('../../assets/backgrounds/bg-6.png')
    &.bg-7
        background-image url('../../assets/backgrounds/bg-7.png')
    &.bg-8
        background-image url('../../assets/backgrounds/bg-8.png')
    &.bg-9
        background-image url('../../assets/backgrounds/bg-9.png')
    &.bg-10
        background-image url('../../assets/backgrounds/bg-10.png')
    &.bg-11
        background-image url('../../assets/backgrounds/bg-11.png')
    &.bg-12
        background-image url('../../assets/backgrounds/bg-12.png')

.content
    z-index 9

    .borderbox
        overflow-y auto
        background rgba(255, 255, 255, 0.95)
        border-right 1px solid #d6ddde
        border-left 1px solid #d6ddde

        h1
            font-size 28px
            line-height 28px

        li
            border-top 1px solid #d6ddde

            &:first-child
                border-top none

        a
            display block
            padding 10px
            // padding-left 40px
            color inherit

            &:hover
                .icon-google
                    color #e22c29
                .icon-facebook
                    color #39579a
                .icon-microsoft
                    color #0070c9
                .icon-mobile-id
                    color #f04822
                .icon-id-card
                    color #3d89f7
                .icon-database
                    color #1e434c
                .icon-sign-out
                    color #cc0033

                span
                    font-weight bold

            i
                text-align center
                height 16px
                width 16px
                line-height 21px !important

            span
                padding-left 10px

        p
            font-size 14px

@media (prefers-color-scheme: dark)
    .content
        .borderbox
            border-color #373838
            background-color #373838

            li
                border-color #697278

            a
                &:hover
                    .icon-database
                    .icon-google
                    .icon-facebook
                    .icon-microsoft
                    .icon-mobile-id
                    .icon-id-card
                    .icon-database
                        color #ffffff

